tests/baselines/reference/privateNameLateSuperUseDefineForClassFields(strict=true,target=esnext).errors.txt
privateNameLateSuperUseDefineForClassFields.ts(3,5): error TS7008: Member '#x' implicitly has an 'any' type.


==== privateNameLateSuperUseDefineForClassFields.ts (1 errors) ====
    class B {}
    class A extends B {
        #x;
        ~~
!!! error TS7008: Member '#x' implicitly has an 'any' type.
        constructor() {
            void 0;
            super();
        }
    }
    